<resources>
    <string name="BACKEND_URL">http://192.168.1.36:8000/api/v1/</string>

    <string name="LOGIN_API">auth/login/</string>
    <string name="REGISTRATION_API">auth/users/</string>

    <string name="app_name">bunker</string>
    <string name="title_result">Result</string>
    <string name="title_profile">Profile</string>
    <string name="dot_dot_text">.....</string>

    <string name="title_activity_assessment">Assessment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="strSubmit">OK</string>
    <string name="strDummyQuestion">Question Goes Here Silently.</string>
    <string name="strDummyQuestionAnswer">Answer Goes Here.</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strCountZero">0</string>
    <string name="strCorrect">Correct</string>
    <string name="strWrong">Wrong</string>
    <string name="strSkipped">Skipped</string>
    <string name="strProfileGreeting">Hi %1$s!,\nWelcome to EnglishDuniya app.</string>
    <string name="strResultTxt">Yay,\nhere is your report.</string>
    <string name="strResultGreetTxt">Congratulations, you now have access to the englishduniya app.</string>

    <string name="strSignup">SIGNUP FOR FREE</string>
    <string name="strLogin">LOG IN</string>
    <string name="strBtnSubmit">SUBMIT</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="strCheckIn">Check In</string>
    <string name="strCheckOut">Check Out</string>




</resources>
