<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkPurple">


    <TextView
        style="@style/TitleLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/productIdTxt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

    <TextView
        style="@style/BoxHeaderTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strSignup"
        android:id="@+id/txtSignup"
        android:layout_above="@+id/viewDivider"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="40dp"
        android:layout_height="0.8dp"
        android:background="@android:color/white"
        android:id="@+id/viewDivider"
        android:layout_above="@+id/txtLogin"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/BoxHeaderTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strLogin"
        android:id="@+id/txtLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />


</RelativeLayout>
