<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dotorbit.projectell.main.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorDarkPurple">



    <RelativeLayout
        android:id="@+id/rllQuestionContainer"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_lightdarkpurple_box_border"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">



            <ImageView
                android:visibility="visible"
                android:src="@drawable/ic_pokeball"
                android:layout_gravity="center"
                android:layout_width="112dp"
                android:layout_height="97dp"
                android:id="@+id/questionImageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="0.07" />



            <TextView
                android:visibility="visible"
                style="@style/QuestionTitleTxtWithImg"
                android:padding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/strDummyQuestion"
                android:id="@+id/txtQuestionTitle"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:maxLines = "6"
                android:scrollbars = "vertical"
                android:layout_weight="1" />


            <ImageView
                android:visibility="gone"
                android:layout_margin="15dp"
                android:src="@drawable/ic_speaker"
                android:layout_width="112dp"
                android:layout_height="97dp"
                android:id="@+id/questionSoundAudio"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.07" />


        </LinearLayout>




    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/rllQuestionAnswerContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_white_box_border">

                    <TextView
                        style="@style/QuestionAnswerTxt"
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strYes"
                        android:id="@+id/txtOptionOne"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_white_box_border">

                    <TextView
                        style="@style/QuestionAnswerTxt"
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strNo"
                        android:id="@+id/txtOptionTwo"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_white_box_border"
                    android:visibility="gone">

                    <TextView
                        style="@style/QuestionAnswerTxt"
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strDummyQuestionAnswer"
                        android:id="@+id/txtOptionThree"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>